# funcapprox

doc/: begin_1.md
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt  basiccppvectoralu.cpp  basiccppvectoralu.h  core.cpp  core.h  random.h  vectoralu.cpp  vectoralu.h
lib/machinelearning/: ANNetwork.cpp  ANNetwork.h  ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  connections.cpp  connections.h  hiddenlayer.cpp  hiddenlayer.h  inputlayer.cpp  inputlayer.h  layer.cpp  layer.h  machinelearning.cpp  machinelearning.h  outputlayer.cpp  outputlayer.h
tests/: CMakeLists.txt  bin_check.cpp  core_check.cpp  machinelearning_check.cpp  main.cpp
